# MintRewardsNFTMint

./: .env.example  .gitignore  README.md
app/: package-lock.json  package.json  tsconfig.json
app/src/: index.ts
app/src/services/: ipfs-service.ts  nft-generator.ts  solana-service.ts
program/: Cargo.toml
program/src/: config.rs  error.rs  lib.rs  processor.rs
